--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#Courses">Courses</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="#">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button><a href="http://127.0.0.1:5500/SignUp.html">Sign Up</a></button>
+                    <button><a href="SignUp.html">Sign Up</a></button>
 
                 </nav>
             </td>
